--- a/themes/hyde/layouts/_default/single.html
+++ b/themes/hyde/layouts/_default/single.html
@@ -3,13 +3,8 @@
   <h1 class="content-title">{{ .Title }}</h1>
   <div class="post-meta post-date"><time  style="display: inline-block" datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-meta post-date">{{ .Date.Format "2006-01-02" }}</time>
 
-  {{ if .Params.tags }}
-    <div class="post-tags" style="display: inline-block; margin-left: 10px">
-        {{ range .Params.tags }}
-          <a style="margin-left: 5px" href="{{ (urlize (printf "tags/%s" . )) | absURL }}/">#{{ . }}</a>&nbsp;
-        {{ end }}
-      </div>
-   {{ end }}
+   <div class="post-tags" style="display: inline-block; margin-left: 10px"><a style="margin-left: 5px" href="{{ "/tags/" | relLangURL}}{{ .Params.tags }}">#{{ .Params.tags }}</a>
+   </div>
 
   </div>
   
