--- a/themes/hyde/layouts/_default/photos.html
+++ b/themes/hyde/layouts/_default/photos.html
@@ -6,7 +6,7 @@
 <div class="page-photos">
   {{ range (readDir "themes/hyde/static/photos") }}
   <figure>
-   <img src="{{"photos/" | absURL }}{{ .Name }}" alt="{{ .Name }}" />
+    <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/{{ .Name }}" alt="{{ .Name }}" />
     <figcaption>{{ .Name | replaceRE "(.*)[.].*" "$1"}}</figcaption>
   </figure>
   {{ end }}
