--- a/themes/hyde/layouts/_default/photos.html
+++ b/themes/hyde/layouts/_default/photos.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="page-photos">
-  {{ range (readDir "themes/hyde/static/photos") }}
+  {{ range (readDir "./static/photos") }}
   <figure>
     <img src="https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/photos/{{ .Name }}" alt="{{ .Name }}" />
     <figcaption>{{ .Name | replaceRE "(.*)[.].*" "$1"}}</figcaption>
