--- a/themes/hyde/layouts/_default/single.html
+++ b/themes/hyde/layouts/_default/single.html
@@ -9,7 +9,8 @@
   </div>
   
   <div class="post-content" style="margin-top: 20px">
-  	{{ .Content }}
+    {{ .Content }}
+    {{ .Render "path"}}
   </div>
 </div>
 
