--- a/themes/hyde/layouts/shortcodes/link.html
+++ b/themes/hyde/layouts/shortcodes/link.html
@@ -22,7 +22,7 @@
       </h4>
       <time class="post-preview--date">{{ .Date.Format ( default "2006-01-02") }}</time>
       {{ if .Params.tags }}
-      <small>{{ range .Params.tags }}#{{ . }}&nbsp;{{ end }}</small>
+      <small>#{{ .Params.tags }}</small>
       {{ end }}
       <section style="max-height:96px;overflow:hidden;" class="post-preview--excerpt">
         {{ .Summary | plainify }}
