--- a/themes/hyde/layouts/_default/bb.html
+++ b/themes/hyde/layouts/_default/bb.html
@@ -47,6 +47,7 @@
     AV.init({
         appId:"kKneKqFppxPaLCfHbglIw7nv-gzGzoHsz", //你的 leancloud 应用 id （设置-应用keys-AppID）
         appKey:"oS9d2e5q6kDN42VXS9yLIQk1", //你的 leancloud 应用 AppKey （设置-应用keys-AppKey）
+        serverURLs: 'https://content.elizen.me'
     });
 
     var query = new AV.Query('content');
