--- a/themes/hyde/layouts/_default/path.html
+++ b/themes/hyde/layouts/_default/path.html
@@ -1,4 +1,4 @@
 {{ if .Params.path }}
     {{$Path := .Params.path}}
-    <photos>{{- range (readDir (printf "%s%s" "./static/images/" $Path )) -}}<img class="avatar" loading='lazy' src="{{(printf "https://cdn.jsdelivr.net/gh/elizen/elizen-blog@gh-pages/images/%s/%s" $Path .Name ) | absURL}}" />{{- end -}}</photos>
+    <photos>{{- range (readDir (printf "%s%s" "./static/images/" $Path )) -}}<img class="avatar" loading='lazy' src="{{(printf "https://cdn.jsdelivr.net/elizen/elizen-blog@gh-pages/images/%s/%s" $Path .Name ) | absURL}}" />{{- end -}}</photos>
 {{ end }}
