--- a/themes/hyde/layouts/index.html
+++ b/themes/hyde/layouts/index.html
@@ -17,6 +17,5 @@
 </article>
 {{- end }}
 </div>
+{{ partial "pagination.html" . }}
 {{- end }}
-
-{{ range (.Paginate (.Pages.GroupByDate "2006")).PageGroups  }}
