--- a/themes/ivy/layouts/partials/footer.html
+++ b/themes/ivy/layouts/partials/footer.html
@@ -1,4 +1,5 @@
   <footer>
+  {{ partial "comments.html" . }}
   {{ partial "foot_custom.html" . }}
   {{ partial "footer_highlightjs" . }}
   {{ with .Site.Params.footer }}
