--- a/themes/ivy/layouts/_default/bb.html
+++ b/themes/ivy/layouts/_default/bb.html
@@ -1,4 +1,6 @@
-{{ define "main" }}
+{{ partial "header.html" . }}
+
+{{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
 <div class="post">
   <h2 class="post-title">{{.Title}}</h2>
   <div class="post-content" id="app">
@@ -100,4 +102,5 @@
         app.count = count;
     }, function(error) {});
 </script>
-{{ end }}
+
+{{ partial "footer.html" . }}
