--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -1,6 +1,10 @@
 {{ partial "header.html" . }}
 
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
+<div class="post">
+  <h2 class="post-title">{{.Title}}</h2>
+</div>
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
 <script type="text/javascript" src='https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.js'></script>
