--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -12,6 +12,12 @@
     <meta property="og:title" content="{{ .Title }} - {{ .Site.Title }}">
     {{ end }}
     <meta name="twitter:card" content="summary">
+    
+    <!-- require APlayer -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+    <!-- require MetingJS -->
+    <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>  
 
     {{ with .Description }}
       {{ $.Scratch.Set "summary" (markdownify .) }}
