--- a/themes/ivy/layouts/_default/books.html
+++ b/themes/ivy/layouts/_default/books.html
@@ -1,8 +1,6 @@
 {{ partial "header.html" . }}
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
-<div class="post">
-  <h2 class="post-title">{{.Title}}</h2>
-</div>
+<div class="post-content">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
 <script type="text/javascript" src='{{ .Site.BaseURL }}Bmdb.min.js'></script>
@@ -15,3 +13,4 @@
       limit: 30
     })
 </script>
+</div>
