--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -1,10 +1,7 @@
 {{ partial "header.html" . }}
 
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
-<div class="post">
-  <h2 class="post-title">{{.Title}}</h2>
-</div>
-
+<div class="post-content">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
 <script type="text/javascript" src='https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.js'></script>
@@ -17,3 +14,4 @@
       limit: 30
     })
 </script>
+</div>
