--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="{{ .Title }} - {{ .Site.Title }}">
     {{ end }}
     <meta name="twitter:card" content="summary">
+    <meta name="referrer" content="never" />
     
     <!-- require APlayer -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
