--- a/themes/ivy/layouts/_default/single.html
+++ b/themes/ivy/layouts/_default/single.html
@@ -2,6 +2,6 @@
 
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
 {{ .Content }}
-
+{{ .Render "path"}}
 
 {{ partial "footer.html" . }}
