--- a/themes/ivy/layouts/partials/footer.html
+++ b/themes/ivy/layouts/partials/footer.html
@@ -1,6 +1,9 @@
   <footer>
   {{ partial "foot_custom.html" . }}
   <hr>
+  {{ if .IsHome }}
+  {{ end }}
+  {{ else }}
   {{ partial "comments.html" . }}
   {{ partial "footer_highlightjs" . }}
   {{ with .Site.Params.footer }}
