--- a/themes/ivy/layouts/partials/footer-cus.html
+++ b/themes/ivy/layouts/partials/footer-cus.html
@@ -1,5 +1,8 @@
   <footer>
-  <hr />
+  {{ partial "foot_custom.html" . }}
+  <hr>
+  {{ partial "footer_highlightjs" . }}
+  {{ with .Site.Params.footer }}
   <div class="copyright">{{ . | markdownify }}</div>
   {{ end }}
   </footer>
