--- a/themes/ivy/static/css/fonts.css
+++ b/themes/ivy/static/css/fonts.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, 'source-han-serif-sc', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif TC', 'Source Han Serif TW', 'Source Han Serif', 'Songti SC', 'Microsoft YaHei', serif;
+  font-family: "Noto Serif", "Noto Serif CJK", "Noto Serif SC", "Noto Serif TC", serif;
 }
 .post blockquote, .newsletter blockquote, .home blockquote {
   font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, 'STKaiti', 'KaiTi', '楷体', 'SimKai', 'DFKai-SB', 'NSimSun', serif;
