update books page

--- a/themes/ivy/layouts/_default/books.html
+++ b/themes/ivy/layouts/_default/books.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
 <div class="post-content">
-<link rel="stylesheet" href="{{ .Site.BaseURL }}Bmdb.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
 <script type="text/javascript" src='{{ .Site.BaseURL }}Bmdb.min.js'></script>
 <script type="text/javascript">
