--- a/themes/hyde/layouts/_default/books.html
+++ b/themes/hyde/layouts/_default/books.html
@@ -1,11 +1,9 @@
-{{ define "main" }}
-<div class="post">
-  <h2 class="post-title"><a href="/books/">我的阅读</a></h2>
-  <div class="post-content"></div>
-</div>
-<link rel="stylesheet" href="{{ .Site.BaseURL }}Bmdb.min.css">
+{{ partial "header.html" . }}
+{{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
+<div class="post-content">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
-<script type="text/javascript" src='{{ .Site.BaseURL }}Bmdb.min.js'></script>
+<script type="text/javascript" src='https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.js'></script>
 <script type="text/javascript">
     new Bmdb({
       type: 'books',
@@ -15,4 +13,4 @@
       limit: 30
     })
 </script>
-{{ end }}
+</div>
