--- a/themes/hyde/layouts/_default/movies.html
+++ b/themes/hyde/layouts/_default/movies.html
@@ -1,8 +1,7 @@
-{{ define "main" }}
-<div class="post">
-  <h2 class="post-title"><a href="/movies/">我的观影</a></h2>
-  <div class="post-content"></div>
-</div>
+{{ partial "header.html" . }}
+
+{{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
+<div class="post-content">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
 <script type="text/javascript" src='https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.js'></script>
@@ -15,4 +14,4 @@
       limit: 30
     })
 </script>
-{{ end }}
+</div>
