update books and movie template

--- a/themes/hyde/layouts/_default/books.html
+++ b/themes/hyde/layouts/_default/books.html
@@ -1,4 +1,4 @@
-{{ partial "header.html" . }}
+{{ partial "head.html" . }}
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
 <div class="post-content">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.css">
