--- a/themes/hyde/layouts/_default/movies.html
+++ b/themes/hyde/layouts/_default/movies.html
@@ -1,13 +1,13 @@
-{{ partial "head.html" . }}
+{{ define "main" }}
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
-<div class="post-content">
+<div class="post">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.css">
 <script type="text/javascript" src='https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js'></script>
 <script type="text/javascript" src='https://cdn.jsdelivr.net/gh/lmm214/immmmm@gh-pages/Bmdb.min.js'></script>
 <script type="text/javascript">
     new Bmdb({
       type: 'movies',
-      selector: '.post-content',
+      selector: '.post',
       secret: '982454ebf4633211d3f8f7558c32792f609795c7100e1d3f1237a85b380d9819',
       noMoreText: '没有更多数据了',
       limit: 30
