--- a/themes/ivy/layouts/_default/home.html
+++ b/themes/ivy/layouts/_default/home.html
@@ -8,7 +8,7 @@
 {{ $.Scratch.Set "pages" .Pages }}
 {{ end }}
 <ul>
-  {{ range (where ($.Scratch.Get "pages") "Section" "!=" "") }}
+  {{ range (where ($.Scratch.Get "pages") "Section" "posts") }}
   <li>
     <span class="date">{{ .Date.Format "2006/01/02" }}</span>
     <a href="{{ .RelPermalink }}">{{ .Title }}</a>
