--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -14,15 +14,15 @@
     <meta name="twitter:card" content="summary">
     <meta name="referrer" content="never" />
 
+    <script async src="/js/load-typekit.js"></script>
     <script src="https://use.typekit.net/kwz5xar.js" async=""></script>
+    <link rel="stylesheet" href="/css/custom.css">
     
     <!-- require APlayer -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
     <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
     <!-- require MetingJS -->
     <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>  
-    <script async src="/js/load-typekit.js"></script>
-    
 
     {{ with .Description }}
       {{ $.Scratch.Set "summary" (markdownify .) }}
