--- a/themes/ivy/static/css/custom.css
+++ b/themes/ivy/static/css/custom.css
@@ -3,7 +3,6 @@
       position: sticky;
       top: 0;
       min-height: 100vh;
-      border-right: 3px solid #ddd;
       width: 200px;
       padding: 2em 1em;
     }
@@ -69,14 +68,14 @@
     border: 1px solid #ddd;
     box-shadow: 5px 5px 5px #eee;
   }
-  .cn del {
+  del {
     background-color: #444;
   }
-  .cn del:hover {
+  del:hover {
     background-color: inherit;
     text-decoration: inherit;
   }
-  .home blockquote, .cn blockquote:not(:hover) {
+  .home blockquote, blockquote:not(:hover) {
     border-left-color: transparent;
   }
   .anchor {
