--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ a {
   color: black;
   text-decoration: none;
   padding-bottom: 2px;
-  border-bottom: 1px solid;
+  border-bottom: 1px dashed;
 }
 
 a:hover {
