--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -1,4 +1,6 @@
-{{ define "main" }}
+{{ partial "header.html" . }}
+
+{{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
 <div class="post">
   <h2 class="post-title">{{.Title}}</h2>
   <style>
