--- a/themes/ivy/layouts/partials/comments.html
+++ b/themes/ivy/layouts/partials/comments.html
@@ -1,7 +1,7 @@
 <!-- twikoo -->
 {{- if .Site.Params.twikoo.enable -}}
 <div class="pagination__title">
-  <span class="pagination__title-h">欢迎评论</span>
+  <span class="pagination__title-h" style="margin-bottom: 30px;">欢迎评论</span>
 </div>
   <div id="tcomment"></div>
   <script src="https://cdn.jsdelivr.net/npm/twikoo@1.4.5/dist/twikoo.all.min.js"></script>
