--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -15,6 +15,7 @@
     <meta name="referrer" content="never" />
 
     <script async src="/js/load-typekit.js"></script>
+    <script async src="/js/fix-toc.min.js"></script>
     <script src="https://use.typekit.net/kwz5xar.js" async=""></script>
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/css/circled-numbers.min.css">
