--- a/themes/ivy/layouts/partials/footer.html
+++ b/themes/ivy/layouts/partials/footer.html
@@ -1,3 +1,4 @@
+  <script async src="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/js/fix-toc.min.js"></script>
   <footer>
   {{ partial "foot_custom.html" . }}
   <hr>
