--- a/themes/ivy/layouts/partials/footer.html
+++ b/themes/ivy/layouts/partials/footer.html
@@ -1,4 +1,3 @@
-  <script async src="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/js/fix-toc.min.js"></script>
   <footer>
   {{ partial "foot_custom.html" . }}
   <hr>
@@ -6,6 +5,8 @@
   {{ partial "footer_highlightjs" . }}
   {{ with .Site.Params.footer }}
   <hr>
+  <script async src="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/js/fix-toc.min.js,npm/@xiee/utils/js/center-img.min.js,npm/@xiee/utils/js/right-quote.min.js,npm/@xiee/utils/js/no-highlight.min.js,npm/@xiee/utils/js/fix-footnote.min.js,npm/@xiee/utils/js/math-code.min.js,npm/@xiee/utils/js/hash-notes.min.js,npm/@xiee/utils/js/external-link.min.js,npm/@xiee/utils/js/alt-title.min.js,npm/@xiee/utils/js/header-link.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@xiee/utils/js/toggle-notes.min.js" defer></script>
   <div class="copyright">{{ . | markdownify }}</div>
   {{ end }}
   </footer>
