--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="referrer" content="never" />
 
-    <script async src="/js/load-typekit.js"></script>
+    <!-- <script async src="/js/load-typekit.js"></script> -->
     <link rel="stylesheet" href="/css/custom.css"></link>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/css/circled-numbers.min.css"></link>
 
