--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -15,8 +15,9 @@
     <meta name="referrer" content="never" />
 
     <!-- <script async src="/js/load-typekit.js"></script> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/css/circled-numbers.min.css"></link> -->
     <link rel="stylesheet" href="/css/custom.css"></link>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/css/circled-numbers.min.css"></link>
+    
 
     <!-- require APlayer -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
