--- a/themes/ivy/layouts/_default/caipu.html
+++ b/themes/ivy/layouts/_default/caipu.html
@@ -12,7 +12,7 @@
 <div class="post">
   <h2 class="post-title">{{.Title}}</h2>
   <div class="post-content">
-    {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
+    {{ if .Params.toc }}{{ .TableOfContents }}{{ end }}
     {{ .Content }}
     {{ .Render "path"}}
   </div>
