--- a/themes/ivy/layouts/_default/caipu.html
+++ b/themes/ivy/layouts/_default/caipu.html
@@ -5,8 +5,8 @@
     #TableOfContents ~ h1 {margin:1em 0;text-align: center;}
     #TableOfContents,#TableOfContents~p:first-of-type{counter-reset:circled-numbers}
     #TableOfContents>ul>li>ul>li{display:inline-block}
-    #TableOfContents>ul>li>ul>li::before,.post-content h2::before{counter-increment:circled-numbers;content:counter(circled-numbers);border-radius:50%;border:1px dashed #999;color:#333;background:#fff;display:inline-block;min-width:1.75em;line-height:1.75em;margin-right:.5em;text-align:center;font-size:.8em}
-    .post-content h2::before{vertical-align:bottom;color:#fff;border:none;background:#999}
+    #TableOfContents>ul>li>ul>li::before,h2::before{counter-increment:circled-numbers;content:counter(circled-numbers);border-radius:50%;border:1px dashed #999;color:#333;background:#fff;display:inline-block;min-width:1.75em;line-height:1.75em;margin-right:.5em;text-align:center;font-size:.8em}
+    h2::before{vertical-align:bottom;color:#fff;border:none;background:#999}
   </style>
 
 {{ if .Params.toc }}{{ .TableOfContents }}{{ end }}
