--- a/themes/ivy/layouts/_default/single.html
+++ b/themes/ivy/layouts/_default/single.html
@@ -1,10 +1,7 @@
 {{ partial "header.html" . }}
 
-{{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
+{{ if .Params.toc }} {{ .TableOfContents }} {{ end }}
 
-{{ if (and (eq (getenv "HUGO_BLOGDOWN_POST_RELREF") "") (and (and .Params.date (lt (now.AddDate 0 0 ($.Site.Params.holdDays | default -90)) .Date)) (in (string .Content) "<!--# ON_HOLD -->"))) }}
-{{ (index (split .Content "<!--# ON_HOLD -->") 0) | safeHTML }}
-{{ else }}
 {{ .Content }}
 {{ end }}
 
