--- a/themes/ivy/layouts/_default/bb.html
+++ b/themes/ivy/layouts/_default/bb.html
@@ -10,6 +10,8 @@
   }
 </script>
 <script src="https://immmmm.com/bb-lmm.js"></script>
+<script src="https://immmmm.com/bb-lmm-mk.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/ViewImage/view-image.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/Lately/lately.min.js"></script>
 
