--- a/themes/ivy/layouts/partials/header.html
+++ b/themes/ivy/layouts/partials/header.html
@@ -17,6 +17,7 @@
     <!-- <script async src="/js/load-typekit.js"></script> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/css/circled-numbers.min.css"></link> -->
     <link rel="stylesheet" href="/css/custom.css"></link>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/lxgw-wenkai-screen-webfont/1.6.0/lxgwwenkaiscreen.css" media="print" onload="this.media='all'">
     
 
     <!-- require APlayer <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css"> <script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script> -->
