--- a/themes/ivy/layouts/shortcodes/gallery.html
+++ b/themes/ivy/layouts/shortcodes/gallery.html
@@ -39,28 +39,41 @@
 }
 </style>
 
-<script type="text/javascript" src="//fastly.jsdelivr.net/gh/raphamorim/waterfall.js/waterfall.min.js"></script>
-<script type="text/javascript" src="//fastly.jsdelivr.net/gh/raphamorim/imgStatus/imgStatus.min.js"></script>
+<script src="//fastly.jsdelivr.net/gh/raphamorim/waterfall.js/waterfall.min.js"></script>
+<script src="//fastly.jsdelivr.net/gh/raphamorim/imgStatus/imgStatus.min.js"></script>
 <script>
-let galleryPhotos = document.querySelectorAll('.gallery-photos') || ''
-if(galleryPhotos){
-  imgStatus.watch('.gallery-photo img', function(imgs) {
-    if(imgs.isDone()){
-      for(var i=0;i < galleryPhotos.length;i++){
-        waterfall(galleryPhotos[i]);
-        let pagePhoto = galleryPhotos[i].querySelectorAll('.gallery-photo');
-        for(var j=0;j < pagePhoto.length;j++){pagePhoto[j].className += " visible"};
+  //外链 gallery 标签相册瀑布流
+  var photosAll = document.getElementsByTagName('gallery') || '';
+  if(photosAll){
+    for(var i=0;i < photosAll.length;i++){
+      photosAll[i].innerHTML = '<div class="gallery-photos">'+photosAll[i].innerHTML+'</div>'
+      var photosIMG = photosAll[i].getElementsByTagName('img')
+      for(var j=0;j < photosIMG.length;j++){
+        wrap(photosIMG[j], document.createElement('div'));
       }
     }
-  });
-  window.addEventListener('resize', function () {
-    for(var i=0;i < galleryPhotos.length;i++){
-      waterfall(galleryPhotos[i]);
-    }
-  });
-}
-</script>
-<script type="text/javascript" src="//fastly.jsdelivr.net/gh/Tokinx/ViewImage/view-image.min.js"></script>
-<script>
-  window.ViewImage && ViewImage.init('.gallery-photo img')
+  }
+  function wrap(el, wrapper) {
+    wrapper.className = "gallery-photo";
+    el.parentNode.insertBefore(wrapper, el);
+    wrapper.appendChild(el);
+  }
+  //相册瀑布流
+  let galleryPhotos = document.querySelectorAll('.gallery-photos') || ''
+  if(galleryPhotos){
+    imgStatus.watch('.gallery-photo img', function(imgs) {
+      if(imgs.isDone()){
+        for(var i=0;i < galleryPhotos.length;i++){
+          waterfall(galleryPhotos[i]);
+          let pagePhoto = galleryPhotos[i].querySelectorAll('.gallery-photo');
+          for(var j=0;j < pagePhoto.length;j++){pagePhoto[j].className += " visible"};
+        }
+      }
+    });
+    window.addEventListener('resize', function () {
+      for(var i=0;i < galleryPhotos.length;i++){
+        waterfall(galleryPhotos[i]);
+      }
+    });
+  }
 </script>
