--- a/themes/ivy/layouts/_default/movies.html
+++ b/themes/ivy/layouts/_default/movies.html
@@ -2,6 +2,7 @@
 
 {{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
 <div class="post">
+  <h2 class="post-title">{{.Title}}</h2>
   <style>
     .gFnzgG,.gFnzgG *{box-sizing:border-box}
     .fIuTG{display:flex;flex-wrap:wrap;margin:0 -2%;background:0 0;line-height:100%}
@@ -103,7 +104,7 @@
     </div>
     <div class="sc-bdnxRM">
       <a href="javascript:void 0;" class="sc-gtsrHT kEoOHR" data-search="year" data-method="equal" data-value="">全部</a>
-      {{range $year := (seq 2022 -1 2009)}}
+      {{range $year := (seq 2023 -1 2012)}}
       <a href="javascript:void 0;" class="sc-gtsrHT dvtjjf" data-search="year" data-method="equal" data-value="{{$year}}">{{$year}}</a>
       {{end}}
     </div>
@@ -125,7 +126,7 @@
       {{if ne $idx 0 }}
       <div 
         class="sc-gKAaRy dfdORB" 
-        data-year="{{index $movie 9}}" 
+        data-year="{{index $movie 11}}" 
         data-star="{{index $movie 8}}"
         data-rating="{{index $movie 6}}"
         data-genres="{{index $movie 7}}"  
@@ -133,7 +134,7 @@
         <a rel="link" href="{{index $movie 5}}" target="_blank">
           <div class="sc-hKFxyN HPRth">
             <div class="lazyload-wrapper ">
-              <img class="avatar" src="{{index $movie 3}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $movie 1}}" width="150" height="220">
+              <img class="avatar" decoding="async" src="{{index $movie 3}}" referrer-policy="no-referrer" loading="lazy" alt="{{index $movie 1}}" width="150" height="220">
             </div>
           </div>
           <div class="sc-iCoGMd kMthTr">{{index $movie 1}}</div>
@@ -154,6 +155,8 @@
       {{end}}
     </div>  
   </div>
+</div>
+
 </div>
 
 </div>
