--- a/themes/ivy/layouts/partials/footer.html
+++ b/themes/ivy/layouts/partials/footer.html
@@ -1,7 +1,8 @@
   <footer>
-    <script src="//fastly.jsdelivr.net/gh/raphamorim/waterfall.js/waterfall.min.js"></script>
-    <script src="//fastly.jsdelivr.net/gh/raphamorim/imgStatus/imgStatus.min.js"></script>
+    <script src="https://immmmm.com/waterfall.min.js"></script>
+    <script src="https://immmmm.com/imgStatus.min.js"></script>
     <script>
+      document.addEventListener('DOMContentLoaded', () => {
       //外链 gallery 标签相册瀑布流
       var photosAll = document.getElementsByTagName('gallery') || '';
       if(photosAll){
@@ -36,6 +37,7 @@
           }
         });
       }
+    });
     </script>
   {{ partial "foot_custom.html" . }}
   <hr>
