--- a/themes/ivy/layouts/_default/list.html
+++ b/themes/ivy/layouts/_default/list.html
@@ -3,7 +3,7 @@
 {{ .Content }}
 
 {{ if .IsHome }}
-{{ $.Scratch.Set "pages" .Site.RegularPages }}
+{{ $.Scratch.Set "pages" first 10 .Site.RegularPages }}
 {{ else }}
 {{ $.Scratch.Set "pages" .Pages }}
 {{ end }}
