--- a/themes/ivy/layouts/_default/list.html
+++ b/themes/ivy/layouts/_default/list.html
@@ -3,12 +3,12 @@
 {{ .Content }}
 
 {{ if .IsHome }}
-{{ $.Scratch.Set "pages" .Site.RegularPages }}
+{{ $.Scratch.Set "pages" first 10 .Site.RegularPages }}
 {{ else }}
 {{ $.Scratch.Set "pages" .Pages }}
 {{ end }}
 <ul>
-  {{ range first 10 (where ($.Scratch.Get "pages") "Section" "!=" "") }}
+  {{ range (where ($.Scratch.Get "pages") "Section" "!=" "") }}
   <li>
     <span class="date">{{ .Date.Format "2006/01/02" }}</span>
     <a href="{{ .RelPermalink }}">{{ .Title }}</a>
